container/front-proxy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 7071 }

dynamic_resources:
  ads_config:
    api_type: GRPC
    transport_api_version: V3
    grpc_services:
    - envoy_grpc:
        cluster_name: xds_cluster
  cds_config:
    resource_api_version: V3
    ads: {}
  lds_config:
    resource_api_version: V3
    ads: {}

static_resources:
  listeners:
    - name: secure_web_traffic
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }
      filter_chains:
        - filters:
            
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                stat_prefix: grpc_web
                codec_type: auto
                route_config:
                  name: web_services
                  virtual_hosts:
                    
                    - name: service3
                      domains:
                        - '*'
                      cors:
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: '*'
                        max_age: '1728000'
                        expose_headers: '*'
                        allow_origin_string_match:
                          - prefix: '*'
                      routes:
                        - match: { prefix: '/' }
                          route:
                            cluster: service3
                            timeout: 60s

                    - name: grpc_services
                      domains:
                        - '*'
                      cors:
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: '1728000'
                        expose_headers: custom-header-1,grpc-status,grpc-message
                        allow_origin_string_match:
                          - prefix: '*'
                      routes:
                        # NOTE: by default, matching happens based on the gRPC route, and not on the incoming request path.
                        # Reference: https://www.envoyproxy.io/docs/envoy/latest/configuration/http_filters/grpc_json_transcoder_filter#route-configs-for-transcoded-requests
                        - match: { prefix: '/grpc.reflection' }
                          route:
                            cluster: service1
                            timeout: 60s
                            max_stream_duration:
                              grpc_timeout_header_max: 60s
                        
                        - match: { prefix: '/opscontrol.service1' }
                          route:
                            cluster: service1
                            timeout: 60s
                            max_stream_duration:
                              grpc_timeout_header_max: 60s
                          
                        - match: { prefix: '/opscontrol.service2' }
                          route:
                            cluster: service2
                            timeout: 60s
                            max_stream_duration:
                              grpc_timeout_header_max: 60s

                http_filters:

                  - name: envoy.filters.health_check
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      pass_through_mode: false
                      cluster_min_healthy_percentages:
                        service1:
                          value: 70.0
                        service2:
                          value: 70.0
                        service3:
                          value: 70.0
                      headers:
                        - name: ':path'
                          exact_match: '/healthz'

                  - name: envoy.extensions.extension_with_matcher
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
                      extension_config:
                          name: envoy.filters.http.grpc_web
                          typed_config:
                            '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                      xds_matcher:
                        matcher_list:
                          matchers:
                          - predicate:
                              not_matcher:
                                single_predicate:
                                  input:
                                    name: request-headers
                                    typed_config:
                                      '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                      header_name: content-type
                                  value_match:
                                    prefix: 'application/grpc-web'
                            on_match:
                              action:
                                name: skip
                                typed_config:
                                  '@type': type.googleapis.com/envoy.extensions.filters.common.matcher.action.v3.SkipFilter


                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors

                  - name: envoy.extensions.extension_with_matcher
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
                      extension_config:
                        name: envoy.filters.http.jwt
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                          providers:
                            provider_google:
                              issuer: https://securetoken.google.com/my-audience
                              audiences:
                                - my-audience
                              remote_jwks:
                                http_uri:
                                  uri: https://www.googleapis.com/service_accounts/v1/jwk/securetoken@system.gserviceaccount.com
                                  cluster: googleapis
                                  timeout: 20s
                              from_headers:
                                - name: Authorization
                                  value_prefix: 'Bearer '
                          rules:
                            - match:
                                prefix: '/'
                              requires:
                                provider_name: provider_google
                      xds_matcher:
                        matcher_list:
                          matchers:
                          - predicate:
                              not_matcher:
                                single_predicate:
                                  input:
                                    name: request-headers
                                    typed_config:
                                      '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                      header_name: content-type
                                  value_match:
                                    prefix: 'application/grpc-web'
                            on_match:
                              action:
                                name: skip
                                typed_config:
                                  "@type": type.googleapis.com/envoy.extensions.filters.common.matcher.action.v3.SkipFilter

                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:

    - type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      name: xds_cluster
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: control-plane
                  port_value: 7070

    - type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 20s
      lb_policy: ROUND_ROBIN
      name: googleapis
      load_assignment:
        cluster_name: googleapis
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: www.googleapis.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
